--- a/media.css
+++ b/media.css
@@ -42,9 +42,9 @@
 }
 
 @media only screen and (max-width: 42.5em) {
-  html {
+  /* html {
     font-size: 50%;
-  }
+  } */
   header {
     height: 100vh;
     width: 100vw;
@@ -66,7 +66,6 @@
   }
   .hero-heading {
     font-weight: 900;
-
     font-size: 5.5rem;
     text-align: left;
   }
@@ -80,11 +79,17 @@
     width: 75vw;
     transform: translateX(100%);
     transition: all 0.25s ease-in;
+    z-index: 10;
   }
 
   .nav-active {
     background-color: unset;
   }
+
+  .nav {
+    max-height: unset;
+  }
+
   .nav,
   .nav-left,
   .nav-right {
@@ -100,12 +105,16 @@
 
   .toggle {
     display: block;
-    z-index: 10000;
+    z-index: 1000000;
+  }
+
+  .show-toggle {
+    opacity: 1;
   }
 
   #toggle {
     opacity: 0;
-    z-index: 1000;
+    z-index: 10000000000;
   }
 
   #toggle:checked ~ nav {
@@ -165,6 +174,10 @@
     background-size: cover;
     position: relative;
   }
+
+  .heading {
+    font-size: 4rem;
+  }
   main {
     display: block;
     width: 100vw;
@@ -174,7 +187,7 @@
   .hero-heading {
     font-weight: 900;
 
-    font-size: 5.5rem;
+    font-size: 4.5rem;
     text-align: left;
   }
 
