--- a/style.css
+++ b/style.css
@@ -549,8 +549,8 @@ footer h3 {
 /* Mobile Menu */
 
 #toggle {
-  width: 10rem;
-  height: 10rem;
+  width: 15rem;
+  height: 15rem;
   z-index: 1000000000000000000000;
   position: fixed;
   top: 0rem;
@@ -575,6 +575,7 @@ footer h3 {
   display: inline-block;
   z-index: 0;
   transition: all 0.2s ease-in;
+  margin-top: 0;
 }
 
 .show-toggle span div {
@@ -586,6 +587,11 @@ footer h3 {
   bottom: 100%;
   z-index: 0;
   transition: all 0.2s ease-in;
+  margin-top: 0;
+}
+
+.show-toggle h3 {
+  margin-top: 0;
 }
 
 .show-toggle span::before,
